<resources>
    <string name="app_name">メジャーオブロード</string>

    <string name="label_latitude" >緯度/latitude : </string>
    <string name="label_longitude">経度/longitude: </string>
    <string name="colon">:</string>
    <string name="value_latitude">hoge</string>
    <string name="value_longitude">fuga</string>
    <string name="label_button_get_location">位置情報を取得する</string>
    <string name="label_switch_continuous_ranging">連続測距 </string>

    <!-- 測距関係 -->
    <string name="label_ranging_start_point">距離測定開始地点</string>
    <string name="value_ranging_start_latitude">hoge</string>
    <string name="value_ranging_start_longitude">fuga</string>
    <string name="label_ranging_finish_point">距離測定終了地点</string>
    <string name="value_ranging_finish_latitude">hoge</string>
    <string name="value_ranging_finish_longitude">fuga</string>
    <string name="label_distance">距離[m]: </string>
    <string name="value_distance">piyo</string>
</resources>
