<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.zeitungm.measureofroad.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="画面は開発中のものです"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_latitude"
        android:id="@+id/label_latitude"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_longitude"
        android:id="@+id/label_longitude"
        android:layout_below="@+id/label_latitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_latitude"
        android:id="@+id/value_latitude"
        android:layout_above="@+id/label_longitude"
        android:layout_alignLeft="@+id/value_longitude"
        android:layout_alignStart="@+id/value_longitude"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_longitude"
        android:id="@+id/value_longitude"
        android:layout_alignTop="@+id/label_longitude"
        android:layout_toRightOf="@+id/label_longitude"
        android:layout_toEndOf="@+id/label_longitude"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_get_location"
        android:id="@+id/button_get_location"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test_text"
        android:text="テスト用テキスト表示領域"
        android:layout_above="@+id/button_get_location"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_ranging_start_point"
        android:text="@string/label_ranging_start_point"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/label_longitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_ranging_finish_point"
        android:layout_marginTop="32dp"
        android:text="@string/label_ranging_finish_point"
        android:layout_below="@+id/label_ranging_start_longitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_distance"
        android:id="@+id/label_distance"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_distance"
        android:id="@+id/value_distance"
        android:layout_alignTop="@+id/label_distance"
        android:layout_toRightOf="@+id/label_latitude"
        android:layout_toEndOf="@+id/label_latitude"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_latitude"
        android:id="@+id/label_ranging_start_latitude"
        android:layout_below="@+id/label_ranging_start_point"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_longitude"
        android:id="@+id/label_ranging_start_longitude"
        android:layout_below="@+id/label_ranging_start_latitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_latitude"
        android:id="@+id/label_ranging_finish_latitude"
        android:layout_below="@+id/label_ranging_finish_point"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_longitude"
        android:id="@+id/label_ranging_finish_longitude"
        android:layout_below="@+id/label_ranging_finish_latitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_ranging_start_latitude"
        android:id="@+id/value_ranging_start_latitude"
        android:layout_below="@+id/label_ranging_start_point"
        android:layout_alignLeft="@+id/value_ranging_start_longitude"
        android:layout_alignStart="@+id/value_ranging_start_longitude"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_ranging_start_longitude"
        android:id="@+id/value_ranging_start_longitude"
        android:layout_alignTop="@+id/label_ranging_start_longitude"
        android:layout_toRightOf="@+id/label_ranging_start_longitude"
        android:layout_toEndOf="@+id/label_ranging_start_longitude"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_ranging_start_latitude"
        android:id="@+id/value_ranging_finish_latitude"
        android:layout_above="@+id/label_ranging_finish_longitude"
        android:layout_alignLeft="@+id/value_ranging_finish_longitude"
        android:layout_alignStart="@+id/value_ranging_finish_longitude"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_ranging_start_longitude"
        android:id="@+id/value_ranging_finish_longitude"
        android:layout_below="@+id/value_ranging_finish_latitude"
        android:layout_toRightOf="@+id/label_ranging_finish_longitude"
        android:layout_toEndOf="@+id/label_ranging_finish_longitude"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_switch_continuous_ranging"
        android:id="@+id/continuous_ranging_switch"
        android:layout_marginBottom="66dp"
        android:layout_alignParentBottom="true"
        android:checked="false"
        android:clickable="false"/>

</RelativeLayout>
